tests/baselines/reference/logicalNotOperatorInvalidOperations.errors.txt
tests/cases/conformance/expressions/unaryOperators/logicalNotOperator/logicalNotOperatorInvalidOperations.ts(8,16): error TS2365: Operator '+' cannot be applied to types '真假' and '数字'.
tests/cases/conformance/expressions/unaryOperators/logicalNotOperator/logicalNotOperatorInvalidOperations.ts(11,16): error TS1109: Expression expected.


==== tests/cases/conformance/expressions/unaryOperators/logicalNotOperator/logicalNotOperatorInvalidOperations.ts (2 errors) ====
    // Unary operator !
    var b: number;
    
    // operand before !
    var BOOLEAN1 = b!;  //expect error
    
    // miss parentheses
    var BOOLEAN2 = !b + b;
                   ~~~~~~
!!! error TS2365: Operator '+' cannot be applied to types '真假' and '数字'.
    
    // miss an operand
    var BOOLEAN3 =!;
                   ~
!!! error TS1109: Expression expected.